[gd_scene load_steps=4 format=3 uid="uid://bn3bc54cdibds"]

[ext_resource type="Script" uid="uid://2y302sd0k6ap" path="res://game/main_scene.gd" id="1_qk4lp"]
[ext_resource type="PackedScene" uid="uid://deyv2v8gvtbsu" path="res://ui/hud.tscn" id="2_bg2q0"]
[ext_resource type="PackedScene" uid="uid://sjpxi1bjmpxx" path="res://game/wnd_pause.tscn" id="3_w8ko4"]

[node name="MainScene" type="Node"]
script = ExtResource("1_qk4lp")

[node name="MessageHolder" type="Node" parent="."]

[node name="Scene" type="CanvasLayer" parent="."]
layer = -2

[node name="Hud" parent="." instance=ExtResource("2_bg2q0")]
layer = -1

[node name="WndPause" parent="." instance=ExtResource("3_w8ko4")]
visible = false

[connection signal="menu_requested" from="Hud" to="." method="_on_hud_menu_requested"]
